--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap-icons": "^1.7.1",
     "classnames": "^2.3.1",
     "firebase": "^9.5.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router": "^6.0.2",
