--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "chat",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
