--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,16 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
+      - name: Setup env variables
+        env:
+            REACT_APP_FIREBASE_KEY: ${{secrets.REACT_APP_FIREBASE_KEY}}
+            REACT_APP_FIREBASE_DOMAIN: ${{secrets.REACT_APP_FIREBASE_DOMAIN}}
+            REACT_APP_FIREBASE_DATABASE: ${{secrets.REACT_APP_FIREBASE_DATABASE}}
+            REACT_APP_FIREBASE_PROJECT_ID: ${{secrets.REACT_APP_FIREBASE_PROJECT_ID}}
+            REACT_APP_FIREBASE_STORAGE_BUCKET: ${{secrets.REACT_APP_FIREBASE_STORAGE_BUCKET}}
+            REACT_APP_FIREBASE_SENDER_ID: ${{secrets.REACT_APP_FIREBASE_SENDER_ID}}
+            REACT_APP_FIREBASE_APP_ID: ${{secrets.REACT_APP_FIREBASE_APP_ID}}
+
       - name: Checkout 🛎️
         uses: actions/checkout@v2.3.1
 
