--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,7 @@ jobs:
             REACT_APP_FIREBASE_STORAGE_BUCKET: ${{secrets.REACT_APP_FIREBASE_STORAGE_BUCKET}}
             REACT_APP_FIREBASE_SENDER_ID: ${{secrets.REACT_APP_FIREBASE_SENDER_ID}}
             REACT_APP_FIREBASE_APP_ID: ${{secrets.REACT_APP_FIREBASE_APP_ID}}
+            REACT_APP_FIREBASE_RECAPTCHA_API_KEY: ${{secrets.REACT_APP_FIREBASE_RECAPTCHA_API_KEY}}
 
       - name: Installing ⚙
         run: |
