--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,16 +11,17 @@ jobs:
         uses: actions/checkout@v2.3.1
 
       - name: Setup env variables 🔐
-        uses: actions/checkout@v2.3.1
-        env:
-            REACT_APP_FIREBASE_KEY: ${{secrets.REACT_APP_FIREBASE_KEY}}
-            REACT_APP_FIREBASE_DOMAIN: ${{secrets.REACT_APP_FIREBASE_DOMAIN}}
-            REACT_APP_FIREBASE_DATABASE: ${{secrets.REACT_APP_FIREBASE_DATABASE}}
-            REACT_APP_FIREBASE_PROJECT_ID: ${{secrets.REACT_APP_FIREBASE_PROJECT_ID}}
-            REACT_APP_FIREBASE_STORAGE_BUCKET: ${{secrets.REACT_APP_FIREBASE_STORAGE_BUCKET}}
-            REACT_APP_FIREBASE_SENDER_ID: ${{secrets.REACT_APP_FIREBASE_SENDER_ID}}
-            REACT_APP_FIREBASE_APP_ID: ${{secrets.REACT_APP_FIREBASE_APP_ID}}
-            REACT_APP_FIREBASE_RECAPTCHA_API_KEY: ${{secrets.REACT_APP_FIREBASE_RECAPTCHA_API_KEY}}
+        run: |
+            touch .env
+            echo REACT_APP_FIREBASE_KEY=${{secrets.REACT_APP_FIREBASE_KEY}} >> .env
+            echo REACT_APP_FIREBASE_DOMAIN=${{secrets.REACT_APP_FIREBASE_DOMAIN}} >> .env
+            echo REACT_APP_FIREBASE_DATABASE=${{secrets.REACT_APP_FIREBASE_DATABASE}} >> .env
+            echo REACT_APP_FIREBASE_PROJECT_ID=${{secrets.REACT_APP_FIREBASE_PROJECT_ID}} >> .env
+            echo REACT_APP_FIREBASE_STORAGE_BUCKET=${{secrets.REACT_APP_FIREBASE_STORAGE_BUCKET}} >> .env
+            echo REACT_APP_FIREBASE_SENDER_ID=${{secrets.REACT_APP_FIREBASE_SENDER_ID}} >> .env
+            echo REACT_APP_FIREBASE_APP_ID=${{secrets.REACT_APP_FIREBASE_APP_ID}} >> .env
+            echo REACT_APP_FIREBASE_RECAPTCHA_API_KEY=${{secrets.REACT_APP_FIREBASE_RECAPTCHA_API_KEY}} >> .env
+            cat .env
 
       - name: Installing ⚙
         run: |
