--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
             touch .env
             echo REACT_APP_FIREBASE_KEY="AIzaSyCqrDEHdsNFXvrB9TRkEv8cBPPOgkxjZwI" >> .env
             echo REACT_APP_FIREBASE_DOMAIN="reactchat-15063.firebaseapp.com" >> .env
-            echo REACT_APP_FIREBASE_DATABASE="https://reactchat-15063-default-rtdb.firebaseio.com/"} >> .env
+            echo REACT_APP_FIREBASE_DATABASE="https://reactchat-15063-default-rtdb.firebaseio.com/" >> .env
             echo REACT_APP_FIREBASE_PROJECT_ID="reactchat-15063" >> .env
             echo REACT_APP_FIREBASE_STORAGE_BUCKET="reactchat-15063.appspot.com" >> .env
             echo REACT_APP_FIREBASE_SENDER_ID=30750907257 >> .env
