--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,10 +11,9 @@ jobs:
         uses: actions/checkout@v2.3.1
 
       - name: Setup env variables 🔐
-        shell: bash
         run: |
             touch .env
-            echo REACT_APP_FIREBASE_KEY=$REACT_APP_FIREBASE_KEY >> .env
+            echo REACT_APP_FIREBASE_KEY= $FIREBASE_KEY >> .env
             echo REACT_APP_FIREBASE_DOMAIN="reactchat-15063.firebaseapp.com" >> .env
             echo REACT_APP_FIREBASE_DATABASE="https://reactchat-15063-default-rtdb.firebaseio.com/" >> .env
             echo REACT_APP_FIREBASE_PROJECT_ID="reactchat-15063" >> .env
@@ -24,7 +23,7 @@ jobs:
             echo REACT_APP_FIREBASE_RECAPTCHA_API_KEY="6Ldc6pMdAAAAAIWHMO1f1oY4YqS8A2LtBxaMvqf8" >> .env
             cat .env
         env:
-          REACT_APP_FIREBASE_KEY: ${{ secrets.REACT_APP_FIREBASE_KEY }}
+          FIREBASE_KEY: ${{ secrets.REACT_APP_FIREBASE_KEY }}
 
       - name: Installing ⚙
         run: |
