--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,28 +10,25 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v2.3.1
 
-      - name: Setup env variables 🔐
-        run: |
-            touch .env
-            echo REACT_APP_FIREBASE_KEY= $FIREBASE_KEY >> .env
-            echo REACT_APP_FIREBASE_DOMAIN="reactchat-15063.firebaseapp.com" >> .env
-            echo REACT_APP_FIREBASE_DATABASE="https://reactchat-15063-default-rtdb.firebaseio.com/" >> .env
-            echo REACT_APP_FIREBASE_PROJECT_ID="reactchat-15063" >> .env
-            echo REACT_APP_FIREBASE_STORAGE_BUCKET="reactchat-15063.appspot.com" >> .env
-            echo REACT_APP_FIREBASE_SENDER_ID=30750907257 >> .env
-            echo REACT_APP_FIREBASE_APP_ID="1:30750907257:web:83477b7c60c1800f42ada8" >> .env
-            echo REACT_APP_FIREBASE_RECAPTCHA_API_KEY="6Ldc6pMdAAAAAIWHMO1f1oY4YqS8A2LtBxaMvqf8" >> .env
-            cat .env
-        env:
-          FIREBASE_KEY: ${{ secrets.REACT_APP_FIREBASE_KEY }}
-
       - name: Installing ⚙
         run: |
           npm install
 
-      - name: Build 🏗
+      - name: Build with variables 🏗
         run: |
+          touch .env
+          echo REACT_APP_FIREBASE_KEY= $FIREBASE_KEY >> .env
+          echo REACT_APP_FIREBASE_DOMAIN="reactchat-15063.firebaseapp.com" >> .env
+          echo REACT_APP_FIREBASE_DATABASE="https://reactchat-15063-default-rtdb.firebaseio.com/" >> .env
+          echo REACT_APP_FIREBASE_PROJECT_ID="reactchat-15063" >> .env
+          echo REACT_APP_FIREBASE_STORAGE_BUCKET="reactchat-15063.appspot.com" >> .env
+          echo REACT_APP_FIREBASE_SENDER_ID=30750907257 >> .env
+          echo REACT_APP_FIREBASE_APP_ID="1:30750907257:web:83477b7c60c1800f42ada8" >> .env
+          echo REACT_APP_FIREBASE_RECAPTCHA_API_KEY="6Ldc6pMdAAAAAIWHMO1f1oY4YqS8A2LtBxaMvqf8" >> .env
+          cat .env
           npm run build
+        env:
+          FIREBASE_KEY: ${{ secrets.REACT_APP_FIREBASE_KEY }}
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.0
