--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Build with variables 🏗
         run: |
           touch .env
-          echo REACT_APP_FIREBASE_KEY= $FIREBASE_KEY >> .env
+          echo REACT_APP_FIREBASE_KEY=${{ env.FIREBASE_KEY }} >> .env
           echo REACT_APP_FIREBASE_DOMAIN="reactchat-15063.firebaseapp.com" >> .env
           echo REACT_APP_FIREBASE_DATABASE="https://reactchat-15063-default-rtdb.firebaseio.com/" >> .env
           echo REACT_APP_FIREBASE_PROJECT_ID="reactchat-15063" >> .env
