--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,11 +13,15 @@ jobs:
       - name: Installing ⚙
         run: |
           npm install
-
+      - name: Set inoputs
+        with: # Set the secret as an input
+          super_secret: 123
+          FIREBASE_KEY: ${{ secrets.REACT_APP_FIREBASE_KEY }}
+          
       - name: Build with variables 🏗
         run: |
           touch .env
-          echo REACT_APP_FIREBASE_KEY=${{ env.FIREBASE_KEY }} >> .env
+          echo REACT_APP_FIREBASE_KEY=$FIREBASE_KEY >> .env
           echo REACT_APP_FIREBASE_DOMAIN="reactchat-15063.firebaseapp.com" >> .env
           echo REACT_APP_FIREBASE_DATABASE="https://reactchat-15063-default-rtdb.firebaseio.com/" >> .env
           echo REACT_APP_FIREBASE_PROJECT_ID="reactchat-15063" >> .env
@@ -27,12 +31,11 @@ jobs:
           echo REACT_APP_FIREBASE_RECAPTCHA_API_KEY="6Ldc6pMdAAAAAIWHMO1f1oY4YqS8A2LtBxaMvqf8" >> .env
           cat .env
           npm run build
-        env:
-          FIREBASE_KEY: ${{ secrets.REACT_APP_FIREBASE_KEY }}
         
       - name: Test vars
         run: |
-          echo "${{ env.FIREBASE_KEY }}"
+          echo $super_secret
+          echo "$super_secret"
           echo ${{ env.FIREBASE_KEY }}
           echo $FIREBASE_KEY
 
