--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,9 @@ jobs:
       - name: Installing ⚙
         run: |
           npm install
+
       - name: Set inoputs
+        uses: actions/checkout@v2.3.1
         with: # Set the secret as an input
           super_secret: 123
           FIREBASE_KEY: ${{ secrets.REACT_APP_FIREBASE_KEY }}
